src/test/deca/syntax/valid/if_then_sans_else_plusieurs_else_if.deca
// Description:
//    if, plusieurs elsif sans else 
//
// Resultats:
//    ok

{ if (true) {
	3;
	}
  else if (false) {
  2;
  }
  else if (true) {
  1;}
  }