src/test/deca/syntax/invalid/mauvais_asm_2.deca
// Description:
//    asm sans type ident
//
// Resultats:
//   

class A extends {
	F asm (a);	
}